BUGFIX ComplexTableField_popup.css "overflow: auto" should only be applied to the container HTML element instead of HTML and BODY which can introduce double scrolling and thus poor usability
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/trunk@61151 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ComplexTableField_popup.css
+++ b/css/ComplexTableField_popup.css
@@ -1,7 +1,10 @@
-html,body {
-	overflow:auto !important; 
+html,
+body {
 	background: #fff !important; 
 }
+	html {
+		overflow: auto; 
+	}
 
 .ComplexTableField_popup {
 	background: #fff;	
